Fix nowrap on final sentence on results

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,8 @@ ul.dc-deck-root {
 #dc-results h1 {
     font-variant: small-caps;
 }
+
+#results-final-sentence {
+    display: inline-block;
+    white-space: normal;
+}
